--- a/profile.html
+++ b/profile.html
@@ -14,10 +14,8 @@
     --muted: rgba(234,240,255,.65);
     --ok:#22c55e;
     --err:#f87171;
-
     --stroke: rgba(255,255,255,0.12);
     --shadow: 0 26px 90px rgba(0,0,0,.55);
-
     --blue:#5b6cff;
     --purple:#7c4dff;
     --green:#34d399;
@@ -29,7 +27,7 @@
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     color:var(--text);
     min-height:100vh;
-    padding-bottom:96px;
+    padding-bottom:110px; /* more for advanced nav */
     background: var(--bg);
     overflow-x:hidden;
   }
@@ -104,55 +102,31 @@
   .circleBtn svg{width:22px;height:22px}
 
   /* ===== SIDEBAR ===== */
-  .overlay{
-    position:fixed; inset:0;
-    background:rgba(0,0,0,.65);
-    display:none; z-index:999;
-    backdrop-filter: blur(4px);
-  }
+  .overlay{position:fixed; inset:0;background:rgba(0,0,0,.65);display:none; z-index:999;backdrop-filter: blur(4px);}
   .overlay.show{display:block;}
   .sidebar{
-    position:fixed; top:0; left:-290px;
-    width:270px; height:100vh;
+    position:fixed; top:0; left:-290px;width:270px; height:100vh;
     background:linear-gradient(180deg, rgba(5,10,24,1), rgba(2,6,23,1));
     border-right:1px solid rgba(255,255,255,.12);
-    padding:16px;
-    transition:.28s ease;
-    z-index:1000;
+    padding:16px;transition:.28s ease;z-index:1000;
     box-shadow:0 20px 80px rgba(0,0,0,.6);
   }
   .sidebar.open{ left:0; }
   .brandRow{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
   .brandSide{font-weight:1000;font-size:18px;letter-spacing:.6px;}
-  .closeBtn{
-    background:rgba(0,0,0,.22);
-    border:1px solid rgba(255,255,255,.14);
-    color:var(--text);
-    border-radius:12px;padding:8px 12px;
-    font-weight:1000;
-  }
-  .userTag{
-    padding:12px;border-radius:16px;
-    border:1px solid rgba(255,255,255,.12);
-    background:rgba(255,255,255,.06);
-    margin-bottom:12px;
-  }
+  .closeBtn{background:rgba(0,0,0,.22);border:1px solid rgba(255,255,255,.14);color:var(--text);border-radius:12px;padding:8px 12px;font-weight:1000;}
+  .userTag{padding:12px;border-radius:16px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.06);margin-bottom:12px;}
   .sideItem{
-    display:flex;gap:10px;align-items:center;
-    padding:12px;
+    display:flex;gap:10px;align-items:center;padding:12px;
     border:1px solid rgba(255,255,255,.12);
-    border-radius:16px;margin-bottom:10px;
-    color:var(--text);
-    background:rgba(0,0,0,.22);
-    font-weight:1000;
-    text-decoration:none;
+    border-radius:16px;margin-bottom:10px;color:var(--text);
+    background:rgba(0,0,0,.22);font-weight:1000;text-decoration:none;
   }
   .sideItem:hover{background:rgba(255,255,255,.08)}
   .activeLink{border:1px solid rgba(56,189,248,.55);background:rgba(56,189,248,0.12);}
   .sideLogout{
     background:linear-gradient(90deg, rgba(248,113,113,1), rgba(239,68,68,1));
-    color:#020617;border:none;width:100%;
-    padding:14px;border-radius:16px;font-weight:1000;cursor:pointer
+    color:#020617;border:none;width:100%;padding:14px;border-radius:16px;font-weight:1000;cursor:pointer
   }
 
   /* ===== CONTENT ===== */
@@ -167,38 +141,27 @@
     backdrop-filter: blur(12px);
   }
 
-  /* ===== profile header + avatar upload ===== */
+  /* ===== Avatar ===== */
   .profileHead{text-align:center;padding:14px 0 6px;}
   .avatarWrap{
-    width:122px;height:122px;
+    width:128px;height:128px;
     margin:0 auto 12px;
     border-radius:999px;
     border:1px solid rgba(255,255,255,.12);
     background:rgba(0,0,0,.24);
-    display:grid;
-    place-items:center;
+    display:grid;place-items:center;
     position:relative;
     overflow:hidden;
-    box-shadow:0 16px 40px rgba(0,0,0,.35);
+    box-shadow:0 18px 55px rgba(0,0,0,.35);
   }
-  .avatarEmoji{
-    font-size:60px;
-    opacity:.95;
-  }
-  .avatarImg{
-    width:100%;height:100%;
-    object-fit:cover;
-    display:none;
-  }
+  .avatarEmoji{font-size:64px;opacity:.95}
+  .avatarImg{width:100%;height:100%;object-fit:cover;display:none;}
   .avatarEdit{
-    position:absolute;
-    right:8px; bottom:8px;
-    width:44px;height:44px;
-    border-radius:16px;
+    position:absolute;right:10px;bottom:10px;
+    width:46px;height:46px;border-radius:16px;
     border:1px solid rgba(255,255,255,.12);
     background:linear-gradient(180deg, rgba(91,108,255,1), rgba(124,77,255,1));
-    display:grid;place-items:center;
-    cursor:pointer;
+    display:grid;place-items:center;cursor:pointer;
     box-shadow:0 18px 55px rgba(91,108,255,.24);
   }
   .avatarEdit:hover{filter:brightness(1.05)}
@@ -260,39 +223,74 @@
     box-shadow:0 18px 55px rgba(91,108,255,.22);
   }
 
-  .tips{
-    margin-top:18px;
-    border-top:1px solid rgba(255,255,255,.10);
-    padding-top:14px;
-  }
-  .tipsTitle{
-    font-weight:1000;
-    color:rgba(234,240,255,.65);
-    font-size:16px;
-    margin:0 0 10px;
-  }
+  .tips{margin-top:18px;border-top:1px solid rgba(255,255,255,.10);padding-top:14px;}
+  .tipsTitle{font-weight:1000;color:rgba(234,240,255,.65);font-size:16px;margin:0 0 10px;}
   ul{margin:0;padding-left:18px;color:rgba(234,240,255,.55);line-height:1.7;font-weight:900;font-size:13px}
 
-  /* ===== BOTTOM NAV (dashboard style upgraded) ===== */
-  .bottomNav{
-    position:fixed;left:0;right:0;bottom:0;
-    height:76px;
-    background:rgba(2,6,23,.78);
-    border-top:1px solid rgba(255,255,255,.12);
-    display:flex;justify-content:space-around;align-items:center;
-    z-index:1200;padding:8px 10px;
-    backdrop-filter: blur(12px);
+  /* =========================================================
+     ✅ ADVANCED BOTTOM NAV (like your screenshot)
+     ========================================================= */
+  .dock{
+    position:fixed;
+    left:0; right:0; bottom:14px;
+    z-index:2000;
+    pointer-events:none;
   }
-  .navItem{
-    flex:1;display:flex;flex-direction:column;
-    align-items:center;justify-content:center;
+  .dockInner{
+    pointer-events:auto;
+    max-width:980px;
+    margin:0 auto;
+    padding:0 14px;
+  }
+  .dockBar{
+    height:76px;
+    border-radius:28px;
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.14);
+    box-shadow:0 20px 70px rgba(0,0,0,.45);
+    backdrop-filter: blur(14px);
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:10px 12px;
+    gap:10px;
+  }
+  .dockItem{
+    flex:1;
+    min-width:70px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    gap:6px;
+    border-radius:18px;
+    padding:10px 0;
     color:rgba(234,240,255,.55);
-    font-size:12px;font-weight:1000;
-    padding:10px 0;border-radius:16px;cursor:pointer;
+    font-size:12px;
+    font-weight:1000;
+    cursor:pointer;
+    user-select:none;
     position:relative;
   }
-  .navItem span{font-size:18px;margin-bottom:4px}
-  .navActive{color:#9bdcff;background:rgba(56,189,248,0.10)}
+  .dockItem .ico{font-size:18px;opacity:.95}
+  .dockItem:hover{background:rgba(255,255,255,.06)}
+  .dockActive{color:#9bdcff;background:rgba(56,189,248,.10)}
+
+  /* floating center home */
+  .dockHome{
+    width:78px;height:78px;
+    border-radius:26px;
+    background:linear-gradient(180deg, rgba(109,87,255,1), rgba(91,108,255,1));
+    box-shadow:0 22px 55px rgba(109,87,255,.30);
+    display:grid;
+    place-items:center;
+    margin-top:-32px;
+    border:1px solid rgba(255,255,255,.16);
+    cursor:pointer;
+    user-select:none;
+  }
+  .dockHome span{font-size:28px;color:white}
+  .dockHome:hover{filter:brightness(1.05)}
 </style>
 </head>
 
@@ -330,10 +328,7 @@
 
 <div class="topbar">
   <div class="toprow">
-    <div class="brand" onclick="goDashboard()">
-      <span>COIN</span>
-    </div>
-
+    <div class="brand" onclick="goDashboard()"><span>COIN</span></div>
     <button class="circleBtn" title="Menu" onclick="openMenu()">
       <svg viewBox="0 0 24 24" fill="none">
         <path d="M4 6h16M4 12h16M4 18h16" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"/>
@@ -348,7 +343,6 @@
   <div class="card">
     <div class="profileHead">
 
-      <!-- ✅ Avatar with upload (big emoji + pen edit) -->
       <div class="avatarWrap">
         <div id="avatarEmoji" class="avatarEmoji">👤</div>
         <img id="avatarImg" class="avatarImg" alt="Avatar"/>
@@ -413,10 +407,7 @@
       </div>
     </div>
 
-    <button class="saveBtn" onclick="saveProfile()">
-      <span style="font-size:18px">💾</span>
-      Save Profile Changes
-    </button>
+    <button class="saveBtn" onclick="saveProfile()">💾 Save Profile Changes</button>
     <div id="msg" class="msg"></div>
   </div>
 
@@ -446,12 +437,8 @@
       </div>
     </div>
 
-    <button class="blueBtn" onclick="changePassword()">
-      <span style="font-size:18px">🔒</span>
-      Change Password
-    </button>
+    <button class="blueBtn" onclick="changePassword()">🔒 Change Password</button>
 
-    <!-- ✅ SECURITY TIPS BACK -->
     <div class="tips">
       <div class="tipsTitle">Security Tips</div>
       <ul>
@@ -464,13 +451,19 @@
   </div>
 </div>
 
-<!-- ✅ Dashboard-style bottom nav -->
-<div class="bottomNav">
-  <div class="navItem" onclick="goDashboard()"><span>🏠</span>Home</div>
-  <div class="navItem" onclick="goDeposit()"><span>💳</span>Deposit</div>
-  <div class="navItem" onclick="goWithdraw()"><span>➡</span>Withdraw</div>
-  <div class="navItem" onclick="goPlans()"><span>💼</span>Plans</div>
-  <div class="navItem navActive"><span>👤</span>Profile</div>
+<!-- ✅ ADVANCED BOTTOM NAV -->
+<div class="dock">
+  <div class="dockInner">
+    <div class="dockBar">
+      <div class="dockItem" onclick="goDeposit()"><div class="ico">💳</div><div>Deposit</div></div>
+      <div class="dockItem" onclick="goWithdraw()"><div class="ico">➡</div><div>Withdraw</div></div>
+
+      <div class="dockHome" onclick="goDashboard()"><span>🏠</span></div>
+
+      <div class="dockItem" onclick="goPlans()"><div class="ico">💼</div><div>Plans</div></div>
+      <div class="dockItem dockActive" onclick="goProfile()"><div class="ico">👤</div><div>Profile</div></div>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -490,7 +483,6 @@ let currentUser = null;
       window.location.replace("login.html");
       return;
     }
-
     const { data, error } = await supabaseClient.auth.getUser();
     const user = data?.user;
     if(error || !user){
@@ -507,7 +499,6 @@ let currentUser = null;
     document.getElementById("sideEmail").innerText = user.email;
 
     await loadProfile();
-
   }catch(e){
     window.location.replace("login.html");
   }
@@ -523,13 +514,14 @@ function closeMenu(){
   document.getElementById("overlay").classList.remove("show");
 }
 
-/* NAV (bottom nav) */
+/* NAV */
 function goDashboard(){ window.location.href="user-dashboard.html"; }
 function goDeposit(){ window.location.href="deposits.html"; }
 function goWithdraw(){ window.location.href="withdraw.html"; }
 function goPlans(){ window.location.href="plans.html"; }
+function goProfile(){ window.location.href="profile.html"; }
 
-/* INPUT HELPERS */
+/* helpers */
 function toggleEdit(id){
   const el = document.getElementById(id);
   el.disabled = !el.disabled;
@@ -546,22 +538,19 @@ function setMsg(type, text){
   else el.textContent = text;
 }
 
-/* ✅ Load Profile: DB first, fallback metadata */
+/* Load profile */
 async function loadProfile(){
   if(!currentUser) return;
 
   let dbRow = null;
-
   const { data, error } = await supabaseClient
     .from("users")
     .select("full_name, phone, country, pin, avatar_url")
     .eq("email", currentUser.email)
     .maybeSingle();
-
   if(!error && data) dbRow = data;
 
   const md = currentUser.user_metadata || {};
-
   const full_name = (dbRow?.full_name || md.full_name || "User");
   const phone     = (dbRow?.phone || md.phone || "");
   const country   = (dbRow?.country || md.country || "");
@@ -577,22 +566,20 @@ async function loadProfile(){
   document.getElementById("country").value = country;
   document.getElementById("pin").value = pin ? pin : "****";
 
-  // avatar
   if(avatarUrl){
     document.getElementById("avatarEmoji").style.display="none";
     const img=document.getElementById("avatarImg");
-    img.src = avatarUrl;
+    img.src = avatarUrl + "?t=" + Date.now();
     img.style.display="block";
   }
 }
 
-/* ✅ SAVE Profile: BOTH DB + METADATA */
+/* save profile */
 async function saveProfile(){
   if(!currentUser){
     setMsg("err","Session missing. Please login again.");
     return;
   }
-
   setMsg("", "Saving changes…");
 
   const full_name = document.getElementById("name").value.trim();
@@ -604,7 +591,6 @@ async function saveProfile(){
     setMsg("err","Name cannot be empty.");
     return;
   }
-
   const finalPin = (pinVal === "****") ? null : pinVal;
 
   const { error: dbError } = await supabaseClient
@@ -637,7 +623,7 @@ async function saveProfile(){
   setMsg("ok","Profile updated successfully ✅");
 }
 
-/* ✅ Change password */
+/* change password */
 async function changePassword(){
   const newPassword = document.getElementById("newPassword").value;
   const confirmNew  = document.getElementById("confirmNewPassword").value;
@@ -652,7 +638,6 @@ async function changePassword(){
   }
 
   const { error } = await supabaseClient.auth.updateUser({ password: newPassword });
-
   if(error){
     setMsg("err", error.message);
     return;
@@ -660,20 +645,17 @@ async function changePassword(){
 
   document.getElementById("newPassword").value = "";
   document.getElementById("confirmNewPassword").value = "";
-
   setMsg("ok","Password changed successfully ✅");
 }
 
-/* ✅ LOGOUT */
+/* logout */
 async function logout(){
   await supabaseClient.auth.signOut();
   window.location.replace("login.html");
 }
 
 /* ============================================================
-   ✅ AVATAR UPLOAD (Supabase Storage bucket "avatars")
-   - Uploads image
-   - Stores public URL in users.avatar_url + metadata avatar_url
+   ✅ AVATAR UPLOAD
    ============================================================ */
 document.getElementById("avatarInput").addEventListener("change", async (e)=>{
   try{
@@ -683,7 +665,6 @@ document.getElementById("avatarInput").addEventListener("change", async (e)=>{
 
     setMsg("", "Uploading photo…");
 
-    // basic validation
     if(!file.type.startsWith("image/")){
       setMsg("err","Please select an image file.");
       return;
@@ -693,37 +674,34 @@ document.getElementById("avatarInput").addEventListener("change", async (e)=>{
       return;
     }
 
-    // create file path
     const ext = file.name.split(".").pop().toLowerCase();
     const path = `${currentUser.id}/avatar.${ext}`;
 
-    // upload
     const { error: upErr } = await supabaseClient
       .storage
       .from("avatars")
       .upload(path, file, { upsert:true, cacheControl:"3600" });
 
     if(upErr){
-      setMsg("err","Avatar upload failed: " + upErr.message + " (Create bucket: avatars)");
+      setMsg("err",
+        "Avatar upload failed: " + upErr.message +
+        " ✅ Fix: run Storage SQL policies I sent in Supabase SQL Editor."
+      );
       return;
     }
 
-    // get public url
     const { data: pub } = supabaseClient.storage.from("avatars").getPublicUrl(path);
     const avatarUrl = pub?.publicUrl;
-
     if(!avatarUrl){
       setMsg("err","Could not fetch avatar url.");
       return;
     }
 
-    // update UI instantly
     document.getElementById("avatarEmoji").style.display="none";
     const img=document.getElementById("avatarImg");
     img.src = avatarUrl + "?t=" + Date.now();
     img.style.display="block";
 
-    // save to DB
     const { error: dbError } = await supabaseClient
       .from("users")
       .upsert([{ email: currentUser.email, avatar_url: avatarUrl }], { onConflict:"email" });
@@ -733,7 +711,6 @@ document.getElementById("avatarInput").addEventListener("change", async (e)=>{
       return;
     }
 
-    // save to metadata (backup)
     const { error: mdError } = await supabaseClient.auth.updateUser({ data: { avatar_url: avatarUrl } });
     if(mdError){
       setMsg("err","Metadata avatar save failed: " + mdError.message);
@@ -741,7 +718,6 @@ document.getElementById("avatarInput").addEventListener("change", async (e)=>{
     }
 
     setMsg("ok","Profile photo updated ✅");
-
   }catch(err){
     setMsg("err","Upload failed.");
   }
